SDBLEE.cydsn/BUILD.log
--------------- Build Started: 10/06/2019 14:51:40 Project: SDBLEE, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c:43:21: error: expected ':', ',', ';', '}' or '__attribute__' before '=' token
     float localTemp = 0.0;
                     ^
main.c: In function 'check_sensors':
main.c:179:34: error: expected expression before ')' token
     if(test_sensor(ADDR_HUMTEMP, )==0){
                                  ^
main.c:185:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:187:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:189:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:191:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:193:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:195:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:197:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:199:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:201:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
main.c:203:13: error: too few arguments to function 'test_sensor'
     else if(test_sensor()==0){
             ^
In file included from main.c:20:0:
SD_I2C.h:45:5: note: declared here
 int test_sensor(uint32 address, uint8 reg);
     ^
--------------- Build Failed: 10/06/2019 14:51:41 ---------------
